Trying to prevent horizontal scrolling on safari mobile

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ body {
   color: white;
   font-family: "museo-sans", sans-serif;
   font-weight: 300;
+  overflow-x: hidden;
 }
 
 a, a:visited {
